--- a/calculation.html
+++ b/calculation.html
@@ -33,11 +33,11 @@
     </script>
 </head>
 <body>
-    <h1>Sum of Two Numbers</h1>
-    <input type="number" id="numA" placeholder="Enter number A" required>
-    <input type="number" id="numB" placeholder="Enter number B" required>
+    <h1>Suma de Dois Números</h1>
+    <input type="number" id="numA" placeholder="Coloque nro A" required>
+    <input type="number" id="numB" placeholder="Coloque nro B" required>
     <button onclick="sendData()">Calculate Sum</button>
-    <div id="results">Results: </div>
+    <div id="resultado">Results: </div>
 </body>
 </html>
 
