--- a/calculation.html
+++ b/calculation.html
@@ -33,11 +33,11 @@
     </script>
 </head>
 <body>
-    <h1>Suma de Dois Números</h1>
+    <h1>Soma de Dois Números</h1>
     <input type="number" id="numA" placeholder="Coloque nro A" required>
     <input type="number" id="numB" placeholder="Coloque nro B" required>
-    <button onclick="sendData()">Calculate Sum</button>
-    <div id="resultado">Results: </div>
+    <button onclick="sendData()">Calculo</button>
+    <div id="results">Resultados: </div>
 </body>
 </html>
 
