--- a/calculation.html
+++ b/calculation.html
@@ -8,7 +8,7 @@
         async function sendData() {
             const A = document.getElementById("numA").value;
             const B = document.getElementById("numB").value;
-            const ngrokUrl = "public_url"; // Replace with your actual ngrok URL
+            const ngrokUrl = "https://bc82-34-125-191-207.ngrok-free.app"; // Replace with your actual ngrok URL
 
             try {
                 const response = await fetch(ngrokUrl, {
