--- a/calculation.html
+++ b/calculation.html
@@ -36,7 +36,7 @@
     <h1>Sum of Two Numbers</h1>
     <input type="number" id="numA" placeholder="Enter number A" required>
     <input type="number" id="numB" placeholder="Enter number B" required>
-    <button onclick="sendData()">Calculo</button>
+    <button onclick="sendData()">Calculate Sum</button>
     <div id="results">Results: </div>
 </body>
 </html>
