--- a/machinelearning.html
+++ b/machinelearning.html
@@ -10,7 +10,7 @@
             const B = document.getElementById("numB").value;
             const C = document.getElementById("numC").value;
             const D = document.getElementById("numD").value;
-            const ngrokUrl = "http://127.0.0.1:5000/classify"; // Replace with your actual ngrok URL
+            const ngrokUrl = "https://ca4a-104-196-35-31.ngrok-free.app/classify"; // Replace with your actual ngrok URL
 
             try {
                 const response = await fetch(ngrokUrl, {
