--- a/machinelearning.html
+++ b/machinelearning.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> bbb
+<!DOCTYPE html> aa
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
             const B = document.getElementById("numB").value;
             const C = document.getElementById("numC").value;
             const D = document.getElementById("numD").value;
-            const ngrokUrl = "https://6ccd-104-196-35-31.ngrok-free.app/classify"; // Replace with your actual ngrok URL
+            const ngrokUrl = "https://7264-104-196-35-31.ngrok-free.appp/classify"; // Replace with your actual ngrok URL
 
             try {
                 const response = await fetch(ngrokUrl, {
